# garmin-extract

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  garmin-extract-windows.spec  garmin_extract.py  pyproject.toml  requirements.txt
.collab/: kanban-board.md
.collab/session-summaries/: 04.14.2026-claude-summary.md
.github/workflows/: build-windows.yml
garmin_extract/: __init__.py  __main__.py  _browser.py  _credentials.py  _google_drive.py  _paths.py  _windows_scheduler.py  _xvfb.py  app.py  cli.py  menu.py
garmin_extract/gui/: __init__.py  app.py  main_window.py  theme.py
garmin_extract/gui/screens/: __init__.py  automation.py  pull_data.py  pull_progress.py  setup.py
garmin_extract/screens/: automation.py  data_pull.py  drive_sheets.py  linux_preflight.py  main_menu.py  pull_progress.py  setup.py  stub.py
pullers/: _gmail_mfa.py  garmin.py  garmin_import_export.py
reports/: build_garmin_csvs.py  build_garmin_sheets.py
scripts/: pull-garmin.sh  setup_gmail_auth.py
tests/: conftest.py
