[project]
name = "garmin-extract"
version = "1.6.0"
description = "Automated Garmin Connect data pipeline using browser automation"
requires-python = ">=3.12"
dependencies = [
    "seleniumbase>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]

[project.scripts]
garmin-extract = "garmin_extract.cli:main"

[tool.setuptools.packages.find]
include = ["garmin_extract*"]

[tool.ruff]
line-length = 100
extend-exclude = ["*.spec"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks fast, isolated unit tests",
    "integration: marks tests that touch real files, network, or external state",
    "slow: marks tests that take more than a few seconds",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
